--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         mink가 테스트 중입니다.
         jiho가 테스트 중입니다.
         
-        
+        --------------------------
+        2025 02 06 입니다.
 </body>
 </html>
