파일/이미지추가
public 파일이랑 이미지 좀 추가했습니다

--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <title>풀무원</title>
+    <!-- resources -->
+    <link rel="stylesheet" href="./css/scss/index.scss">
     <script defer src="./js/common.js"></script>
     <script defer src="./js/index.js"></script>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
 </head>
 <body>
-    index
+    <header>
+        <div class="header-wrap">
+            <div class="header-nav">
+                <h1>
+                    <a href="#">
+                        <img src="./img/public/public_logo_01.png" alt="">
+                    </a>
+                </h1>
+                <nav>
+                    <a href="#">회사소개</a>
+                    <a href="#">사회책임경영</a>
+                    <a href="#">바른먹거리</a>
+                    <a href="#">뉴스룸</a>
+                </nav>
+            </div>
+            <div class="header-icons">
+                <a href="#" class="trigger-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+            </div>  
+        </div>
+    </header>
 </body>
 </html>
