--- a/index.html
+++ b/index.html
@@ -4,29 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>풀무원</title>
+
+    <!-- meta -->
+    <meta name="author" content="김도연,황수빈,여태경,천지호">
+    <meta name="description" content="웹사이트 리뉴얼 팀 프로젝트 - 풀무원">
+    <meta name="keywords" content="company, renewal, green, healthy">
+    <meta name="Resource-type" content="document">
+    <meta property="og:title" content="풀무원" />
+	<meta property="og:description" content="풀무원" />	
+    <meta property="og:url" content="#">
+    <meta property="og:image" content="#">
+
     <!-- resources -->
     <link rel="stylesheet" href="./css/scss/index.scss">
     <script defer src="./js/common.js"></script>
     <script defer src="./js/index.js"></script>
+
     <!-- favicon -->
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
+    
 </head>
 <body>
+    <!-- header -->
     <header>
-        <div class="header-wrap">
+        <div class="header-wrap-pc">
             <div class="header-nav">
+                <!-- logo -->
                 <h1>
                     <a href="#">
                         <img src="./img/public/public_logo_01.png" alt="">
                     </a>
                 </h1>
-                <nav>
-                    <a href="#">회사소개</a>
-                    <a href="#">사회책임경영</a>
-                    <a href="#">바른먹거리</a>
-                    <a href="#">뉴스룸</a>
-                </nav>
+                <!-- navigation -->
+                <ul class="navigation">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">사회책임경영</a></li>
+                    <li><a href="#">바른먹거리</a></li>
+                    <li><a href="#">뉴스룸</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header-wrap-mobile">
+            <div class="header-nav">
+                <!-- logo -->
+                <h1>
+                    <a href="#">
+                        <img src="./img/public/public_logo_01.png" alt="">
+                    </a>
+                </h1>
+                <!-- navigation -->
+                <ul class="navigation">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">사회책임경영</a></li>
+                    <li><a href="#">바른먹거리</a></li>
+                    <li><a href="#">뉴스룸</a></li>
+                </ul>
             </div>
             <div class="header-icons">
                 <a href="#" class="trigger-menu">
@@ -34,8 +67,12 @@
                     <span></span>
                     <span></span>
                 </a>
-            </div>  
+            </div> 
         </div>
     </header>
+
+    <main>
+
+    </main>
 </body>
 </html>
