--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="#">
 
     <!-- resources -->
-    <link rel="stylesheet" href="./css/scss/index.scss">
+    <link rel="stylesheet" href="./css/index.css">
     <script defer src="./js/common.js"></script>
     <script defer src="./js/index.js"></script>
 
@@ -29,13 +29,15 @@
     <!-- header -->
     <header>
         <div class="header-wrap-pc">
-            <div class="header-nav">
+            <div class="header-logo">
                 <!-- logo -->
                 <h1>
                     <a href="#">
                         <img src="./img/public/public_logo_01.png" alt="">
                     </a>
                 </h1>
+            </div>
+            <div class="header-nav">
                 <!-- navigation -->
                 <ul class="navigation">
                     <li><a href="#">회사소개</a></li>
@@ -43,7 +45,7 @@
                     <li><a href="#">바른먹거리</a></li>
                     <li><a href="#">뉴스룸</a></li>
                 </ul>
-            </div>
+            </div>    
         </div>
         <div class="header-wrap-mobile">
             <div class="header-nav">
