--- a/sustainability.html
+++ b/sustainability.html
@@ -3,13 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>풀무원</title>
+    <!-- resources -->
+    <link rel="stylesheet" href="./css/sustainability.css">
+    <script defer src="./js/common.js"></script>
+    <script defer src="./js/index.js"></script>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
 </head>
 <body>
-    
+<main>
+        <div class="sustainability">
+            <h2>사회책임경영</h2>
+            <div class="tab-head">
+                <button>개요 및 전략</button>
+                <button>활동 및 실적</button>
+                <button>수상</button>
+            </div>
+            
+            <div class="tab-body">
+                <div class="tab-con-01">
+                    <h2>
+                        풀무원은 경제적 사회적 환경적 가치 창출을 풀무원의<br>
+                        사회적책임으로 정의하고 끊임없는 혁신을 통해<br>
+                        공유가치를 창출함으로써 <span>지속가능한 성장을 도모하겠습니다.</span>
+                    </h2>
+                    <div class="sb-01">
+                        <b>풀무원의 기업사회책임</b>
+                        <p>풀무원은 경제적 가치, 사회적 가치, 환경적 가치 창출을 우리의 기업사회책임으로 정의하고 있습니다.<br>
+                            <span>이러한 기업사회책임을 다하기 위하여,<br>다음의 실천 지침을 성실히 이행할 것을 다짐합니다.</span></p>
+                    </div>
+                    <ul>
+                        <li>
+                            <b>고객이<br>신뢰하는 풀무원</b>
+                            <div>
+                                <p>우리는 고객의 건강과 행복을 최우선 가치로 삼아 기업 경영을 혁신합니다.</p>
+                                <p>우리는 고객의 소리에 귀 기울여 고객만족과 감동을 실현하는 제품과 서비스를 제공합니다.</p>
+                            </div>
+                        </li>
+                        <li class="bc">
+                            <b>주주에게<br>매력적인 풀무원</b>
+                                <div>
+                                    <p>우리는 모든 형태의 부패에 반대하고, 합리적 지배구조 하에서 경영 현황을 투명하게 공개합니다.</p>
+                                    <p>우리는 법규를 준수하고 기업가치를 제고하여 주주에게 지속가능한 이익을 제공하기 위해 노력합니다.</p>
+                                </div>
+                        </li>
+                        <li>
+                            <b>지역사회에서<br>사랑받는 풀무원</b>
+                                <div>
+                                    <p>우리는 자원을 효율적으로 사용하며 원료, 제조, 판매, 폐기의 과정에서 환경 보존을 실천합니다.</p>
+                                    <p>우리는 지역사회의 지속가능한 발전을 위해 사회공헌 활동에 앞장섭니다.</p>
+                                </div>
+                        </li>
+                        <li class="bc-1">
+                            <b>협력기업과<br>함깨하는 풀무원</b>
+                                <div>
+                                    <p>우리는 협력기업과 가치를 실천하는 동반자로서,동등한 지위에서 공정하게 거래합니다.</p>
+                                    <p>우리는 협력기업과 경쟁력 강화 및 공동 발전을 위해 상생 협력합니다.</p>
+                                </div>
+                        </li>
+                        <li>
+                            <b>기업구성원이<br>행복한 풀무원</b>
+                                <div>
+                                    <p>우리는 인권을 보장하고 다양성을 존중하며,공정한 기회 제공을 통해 구성원의 성장을 지원합니다.</p>
+                                    <p>우리는 구성원의 안전과 건강을 보장하며,일과 삶이 조화를 이룰 수 있도록 지원합니다.</p>
+                                </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="tab-con-02">
+                    <h2>
+                        풀무원은 사회책임경영을 통해 ‘글로벌 No.1 기업’ 으로 도약하겠습니다.
+                    </h2>
 
-    <header>
-        <img src="https://www.pulmuone.co.kr/pulmuone/img/logo.png"
-    </header>
+                    <div class="sb-02">
+                        <b>지속가능식품 체계도</b>
+                        <p>
+                            풀무원은 이웃사랑, 생명존중의 정신에서 시작한 “내 가족의 건강과 행복을 위한 바른먹거리”를 “내 몸에도 지구환경에도 좋은<br>
+                            지속가능 식품”으로 진화시켰습니다. 풀무원의 지속가능 식품은 동물성 원료 사용을 줄이고 식물성 원료 사용을 지향하는<br>
+                            ‘식물성 지향 식품(Plant-Forward Foods)’, 지속가능 속성의 동물성 원료를 강조하는 ‘동물복지 식품(Animal Welfare Foods)’으로 구성됩니다.
+                        </p>
+
+                        <div>
+                            <img src="https://www.pulmuone.co.kr/pulmuone/img/act2202_img05.jpg" alt="">
+                        </div>
+                    </div>
+
+
+                    <div class="sb-03">
+                        <b>풀무원 ESG 경영 주요 성과</b>
+                        <p>창립부터 이어온 풀무원 정신과 이를 계승한 미션, 사회책임경영을 통해 
+                            ESG 성과를 창출하여 대외적으로 높은 인정을 받고 있습니다.</p>
+                    </div>
+
+                    <img src="https://www.pulmuone.co.kr/pulmuone/img/act2202_img05_04.jpg">
+                </div>
+                <div class="tab-con-03"></div>
+            </div>
+        </div>
+</main>
+
+
 </body>
 </html>
