--- a/company.html
+++ b/company.html
@@ -234,9 +234,9 @@
                                     <div class="swiper-slide"><img src="./img/company/history01_05.jpg" alt=""></div>
                                     <div class="swiper-slide"><img src="./img/company/history01_06.jpg" alt=""></div>
                                     <div class="swiper-slide"><img src="./img/company/history01_07.jpg" alt=""></div>
-                                    <div class="swiper-slide"><img src="./img/company/history08.jpg" alt=""></div>
-                                    <div class="swiper-slide"><img src="./img/company/history09.jpg" alt=""></div>
-                                    <div class="swiper-slide"><img src="./img/company/history10.jpg" alt=""></div>
+                                    <div class="swiper-slide"><img src="./img/company/history01_08.jpg" alt=""></div>
+                                    <div class="swiper-slide"><img src="./img/company/history01_09.jpg" alt=""></div>
+                                    <div class="swiper-slide"><img src="./img/company/history01_10.jpg" alt=""></div>
                                     <div class="swiper-slide"><img src="./img/company/history11.jpg" alt=""></div>
                                     <div class="swiper-slide"><img src="./img/company/history12.jpg" alt=""></div>
                                     <div class="swiper-slide"><img src="./img/company/history13.jpg" alt=""></div>
