--- a/sustainability_ons.html
+++ b/sustainability_ons.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="./css/sustainability.css">
     <script defer src="./js/common.js"></script>
     <script defer src="./js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script defer src="./js/common.js"></script>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
     <!-- favicon -->
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
 </head>
 <body>
     <main>
-        <div class="sustainability">
 
+        <div class="main-title-img"><img src="./img/sustainability/sustainability_title_img.jpg" alt=""></div>
+        <div>
             <div class="main-title">
                 <b>사회책임경영</b>
             </div>
@@ -26,6 +30,8 @@
                     <li>수상</li>
                 </ul>
             </div>
+
+        <div class="sustainability">
             
             <div class="tab-body">
                 <div class="tab-con-01">
@@ -301,7 +307,6 @@
                         
                 </div>
             </div>
-        </div>
         </div>
 </main>
 
