--- a/sustainability_activity.html
+++ b/sustainability_activity.html
@@ -7,7 +7,7 @@
     <!-- resources -->
     <link rel="stylesheet" href="./css/sustainability.css">
     <script defer src="./js/common.js"></script>
-    <script defer src="./js/index.js"></script>
+    <script defer src="./js/sustainability.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="./js/common.js"></script>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
@@ -25,9 +25,15 @@
             </div>
             <div class="main-tab-menu">
                 <ul class="tab-list">
-                    <li>개요 및 전략</li>
-                    <li class="active">활동 및 실적</li>
-                    <li>수상</li>
+                    <a href="">
+                        <li>개요 및 전략</li>
+                    </a>
+                    <a href="">
+                        <li class="active">활동 및 실적</li>
+                    </a>
+                    <a href="">
+                        <li>수상</li>
+                    </a>
                 </ul>
             </div>
 
@@ -40,14 +46,15 @@
                     풀무원은 사회책임경영을 통해 <span>‘글로벌 No.1 기업’</span> 으로 도약하겠습니다.
                 </h2>
 
-                <div class="sb-01">
-                    <b>지속가능식품 체계도</b>
-                    <p>
-                        풀무원은 이웃사랑, 생명존중의 정신에서 시작한 “내 가족의 건강과 행복을 위한 바른먹거리”를 “내 몸에도 지구환경에도 좋은<br>
-                        지속가능 식품”으로 진화시켰습니다. 풀무원의 지속가능 식품은 동물성 원료 사용을 줄이고 식물성 원료 사용을 지향하는<br>
-                        ‘식물성 지향 식품(Plant-Forward Foods)’, 지속가능 속성의 동물성 원료를 강조하는 ‘동물복지 식품(Animal Welfare Foods)’으로 구성됩니다.
-                    </p>
-                </div>
+                        <div class="sb-01">
+                            <b>지속가능식품 체계도</b>
+                            <p>
+                                풀무원은 이웃사랑, 생명존중의 정신에서 시작한 “내 가족의 건강과 행복을 위한 바른먹거리”를 “내 몸에도 지구환경에도 좋은<br>
+                                지속가능 식품”으로 진화시켰습니다. 풀무원의 지속가능 식품은 동물성 원료 사용을 줄이고 식물성 원료 사용을 지향하는<br>
+                                ‘식물성 지향 식품(Plant-Forward Foods)’, 지속가능 속성의 동물성 원료를 강조하는 ‘동물복지 식품(Animal Welfare Foods)’으로 구성됩니다.
+                            </p>
+                        </div>
+
 
                 <div class="pic">
                     <img src="https://www.pulmuone.co.kr/pulmuone/img/act2202_img05.jpg" alt="">
@@ -175,5 +182,6 @@
             </div>
         </div>
     </main>
+
 </body>
 </html>
