--- a/sustainability_result.html
+++ b/sustainability_result.html
@@ -25,9 +25,18 @@
             </div>
             <div class="main-tab-menu">
                 <ul class="tab-list">
-                    <li>개요 및 전략</li>
-                    <li>활동 및 실적</li>
-                    <li class="active">수상</li>
+                    <li>
+                        <a href="./sustainability_ons.html">
+                            개요 및 전략</a>
+                    </li>
+
+                    <li>
+                    <a href="./sustainability_activity.html">
+                    활동 및 실적</a></li>
+
+                    <li class="active">
+                    <a href="./sustainability_result.html">
+                    수상</a></li>
                 </ul>
             </div>
 
