--- a/include.html
+++ b/include.html
@@ -15,41 +15,40 @@
             <!-- navigation -->
             <ul class="navigation">
                 <li>
-                    <a href="#">회사소개</a>
+                    <a href="./company_ceo.html">회사소개</a>
                     <div class="nav-sub-01">
                         <div>
-                            <a href="#">CEO 인사말</a>
-                            <a href="#">히스토리</a>
-                            <a href="#">가치 및 사업소개</a>
+                            <a href="./company_ceo.html">CEO 인사말</a>
+                            <a href="./company_history.html">히스토리 및 가치</a>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <a href="#">사회책임경영</a>
+                    <a href="./sustainability_ons.html">사회책임경영</a>
                     <div class="nav-sub-02">
                         <div>
-                            <a href="#">개요 및 전략</a>
-                            <a href="#">활동 및 실적</a>
-                            <a href="#">수상</a>
+                            <a href="./sustainability_ons.html">개요 및 전략</a>
+                            <a href="./sustainability_activity.html">활동 및 실적</a>
+                            <a href="./sustainability_result.html">수상</a>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <a href="#">바른먹거리</a>
+                    <a href="./food_rule.html">바른먹거리</a>
                     <div class="nav-sub-03">
                         <div>
-                            <a href="#">바른먹거리 원칙</a>
-                            <a href="#">바른먹거리 캠페인</a>
-                            <a href="#">식품안전 및 품질정책</a>
+                            <a href="./food_rule.html">바른먹거리 원칙</a>
+                            <a href="./food_campaign.html">바른먹거리 캠페인</a>
+                            <a href="./food_safety.html">식품안전 및 품질정책</a>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <a href="#">뉴스룸</a>
+                    <a href="./news_enter.html">뉴스룸</a>
                     <div class="nav-sub-04">
                         <div>
-                            <a href="#">기업뉴스</a>
-                            <a href="#">ESG 경영뉴스</a>
+                            <a href="./news_enter.html">기업뉴스</a>
+                            <a href="./news_esg.html">ESG 경영뉴스</a>
                         </div>
                     </div>
                 </li>
@@ -62,7 +61,7 @@
         <div class="header-nav">
             <!-- logo -->
             <h1>
-                <a href="#">
+                <a href="./index.html">
                     <img src="./img/public/public_logo_01.png" alt="풀무원 공식 로고">
                 </a>
             </h1>
@@ -79,34 +78,33 @@
         <ul class="nav-down">
             <div class="nav-down-menu">
                 <li>
-                    <span><a href="#">회사소개</a></span>
+                    <span><a href="./company_ceo.html">회사소개</a></span>
                     <div>
-                        <a href="#">CEO 인사말</a>
-                        <a href="#">히스토리</a>
-                        <a href="#">가치 및 사업소개</a>
+                        <a href="./company_ceo.html">CEO 인사말</a>
+                        <a href="./company_history.html">히스토리 및 가치</a>
                     </div>
                 </li>
                 <li>
-                    <span><a href="#">사회책임경영</a></span>
+                    <span><a href="./sustainability_ons.html">사회책임경영</a></span>
                     <div>
-                        <a href="#">개요 및 전략</a>
-                        <a href="#">활동 및 실적</a>
-                        <a href="#">수상</a>
+                        <a href="./sustainability_ons.html">개요 및 전략</a>
+                        <a href="./sustainability_activity.html">활동 및 실적</a>
+                        <a href="./sustainability_result.html">수상</a>
                     </div>
                 </li>
                 <li>
-                    <span><a href="#">바른먹거리</a></span>
+                    <span><a href="./food_rule.html">바른먹거리</a></span>
                     <div>
-                        <a href="#">바른먹거리 원칙</a>
-                        <a href="#">바른먹거리 캠페인</a>
-                        <a href="#">식품안전 및 품질정책</a>
+                        <a href="./food_rule.html">바른먹거리 원칙</a>
+                        <a href="./food_campaign.html">바른먹거리 캠페인</a>
+                        <a href="./food_safety.html">식품안전 및 품질정책</a>
                     </div>
                 </li>
                 <li>
-                    <span><a href="#">뉴스룸</a></span>
+                    <span><a href="./news_enter.html">뉴스룸</a></span>
                     <div>
-                        <a href="#">기업뉴스</a>
-                        <a href="#">ESG 경영뉴스</a>
+                        <a href="./news_enter.html">기업뉴스</a>
+                        <a href="./news_esg.html">ESG 경영뉴스</a>
                     </div>
                 </li>
             </div>
