--- a/company.html
+++ b/company.html
@@ -21,6 +21,7 @@
     <!-- resources -->
     <link rel="stylesheet" href="./css/company.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="./js/common.js"></script>
     <script defer src="./js/company.js"></script>
 
