--- a/sustainability.html
+++ b/sustainability.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/sustainability.css">
     <script defer src="./js/common.js"></script>
     <script defer src="./js/index.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- favicon -->
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
