--- a/sustainability_result.html
+++ b/sustainability_result.html
@@ -6,11 +6,11 @@
     <title>풀무원</title>
     <!-- resources -->
     <link rel="stylesheet" href="./css/sustainability.css">
-    <script defer src="./js/common.js"></script>
-    <script defer src="./js/index.js"></script>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script defer src="./js/common.js"></script>
-    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet">
+    <script defer src="./js/sustainability.js"></script>
+
     <!-- favicon -->
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./img/public/public_favicon_01.png" sizes="16x16" />
@@ -25,18 +25,22 @@
             </div>
             <div class="main-tab-menu">
                 <ul class="tab-list">
-                    <li>
-                        <a href="./sustainability_ons.html">
-                            개요 및 전략</a>
-                    </li>
+                    <a href="./sustainability_ons.html">
+                        <li>
+                            개요 및 전략
+                        </li>
+                    </a>
 
-                    <li>
                     <a href="./sustainability_activity.html">
-                    활동 및 실적</a></li>
+                        <li>
+                        활동 및 실적
+                        </li>
+                    </a>
 
-                    <li class="active">
                     <a href="./sustainability_result.html">
-                    수상</a></li>
+                        <li class="active">수상</li>
+                    </a>
+
                 </ul>
             </div>
 
