--- a/company_ceo.html
+++ b/company_ceo.html
@@ -13,7 +13,7 @@
     <!-- meta -->
     <meta name="author" content="김도연,황수빈,여태경,천지호">
     <meta name="description" content="웹사이트 리뉴얼 팀 프로젝트 - 풀무원">
-    <meta name="keywords" content="company, renewal, green, healthy">ss
+    <meta name="keywords" content="company, renewal, green, healthy">
     <meta name="Resource-type" content="document">
     <meta property="og:title" content="풀무원" />
 	<meta property="og:description" content="풀무원" />	
