마지막index,new수정
했습ㄴㅣ다

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
                             <span class="slide-text">
                                 <b>01.</b>
                                 <b>식물성지향</b>
-                                <b>사람과 지구의 건강을 위해 식물성 원료를 지향하고
-                                    동물성 원료 사용을 줄이는 제품/식단</b>
+                                <b>사람과 지구의 건강을 위해
+                                    식물성 원료를 지향하고
+                                    동물성 원료 사용을 줄이는 제품</b>
                             </span>
                         </div>
                         <div class="img-wrap">
@@ -74,8 +75,9 @@
                             <span class="slide-text">
                                 <b>02.</b>
                                 <b>동물복지</b>
-                                <b>건강한 사육환경에서 생산하고 생태계의
-                                    지속적인 순환에 기여하는 동물복지 식재</b>
+                                <b>건강한 사육환경에서 생산하고
+                                    생태계의 지속적인 순환에
+                                    기여하는 동물복지 식재</b>
                             </span>
                         </div>
                         <div class="img-wrap">
@@ -83,8 +85,10 @@
                             <span class="slide-text">
                                 <b>03.</b>
                                 <b>친환경 케어</b>
-                                <b>차별화된 디자인 푸드와 큐레이션 서비스 역량을
-                                    바탕으로, 특별한 고객 경험 서비스를 제공</b>
+                                <b>차별화된 디자인 푸드와
+                                    큐레이션 서비스 역량을 바탕으로,
+                                    특별한 고객 경험
+                                    서비스를 제공</b>
                             </span>
                         </div>
                         <div class="img-wrap">
@@ -92,8 +96,9 @@
                             <span class="slide-text">
                                 <b>04.</b>
                                 <b>건강한 경험</b>
-                                <b>원료, 제조, 판매/포장, 폐기 등
-                                    환경에 부정적인 영향 요인을 제거하거나 최소화</b>
+                                <b>원료,제조,판매,폐기 등
+                                    환경에 부정적인 영향 요인을
+                                    제거하거나 최소화</b>
                             </span>
                         </div>
                     </div>
