--- a/index.html
+++ b/index.html
@@ -398,8 +398,7 @@
 
                             <div class="tab-box">
                                 <div class="square-box">
-                                    <a
-                                        href="https://edutech.whz.co.kr/curriculum/children?tpf=education/curriculum_detail&code=19">
+                                    <a href="./food_campaign.html">
                                         <div>
                                             <b>어린이</b>
                                             <img src="./img/index/index_tabcontimg_01.png" alt="">
@@ -407,7 +406,7 @@
                                                 평생 건강이 됩니다.</b>
                                         </div>
                                     </a>
-                                    <a href="http://foodforchange.or.kr/parentschild">
+                                    <a href="./food_campaign.html">
                                         <div>
                                             <b>성인</b>
                                             <img src="./img/index/index_tabcontimg_02.png" alt="">
@@ -415,8 +414,7 @@
                                                 방법을 길러줍니다.</b>
                                         </div>
                                     </a>
-                                    <a
-                                        href="https://bdsenior.platfarm.co.kr/contents/view/VC2308210142552977B2100?menu=217&menuitem=1307">
+                                    <a href="./food_campaign.html">
                                         <div>
                                             <b>시니어</b>
                                             <img src="./img/index/index_tabcontimg_03.png" alt="">
