--- a/company_ceo.html
+++ b/company_ceo.html
@@ -36,14 +36,14 @@
     <!-- header -->
     <main>
         <div class="main-title-img"><img src="./img/company/company_title_bg_img.jpg" alt=""></div>
+        <div class="main-title">
+            <b>회사소개</b>
+        </div>
         <div class="company">
-            <div class="main-title">
-                <b>회사소개</b>
-            </div>
             <div class="main-tab-menu">
                 <ul class="tab-list">
-                    <li class="active"><a href="company_ceo.html">CEO 인사말</a></li> 
-                    <li><a href="company_history.html">히스토리 및 가치</a></li>
+                    <a href="company_ceo.html"><li class="active">CEO 인사말</li></a>
+                    <a href="company_history.html"><li>히스토리 및 가치</li></a>
                 </ul>
             </div>
                 
