--- a/company_history.html
+++ b/company_history.html
@@ -13,7 +13,7 @@
     <!-- meta -->
     <meta name="author" content="김도연,황수빈,여태경,천지호">
     <meta name="description" content="웹사이트 리뉴얼 팀 프로젝트 - 풀무원">
-    <meta name="keywords" content="company, renewal, green, healthy">ss
+    <meta name="keywords" content="company, renewal, green, healthy">
     <meta name="Resource-type" content="document">
     <meta property="og:title" content="풀무원" />
 	<meta property="og:description" content="풀무원" />	
@@ -35,10 +35,10 @@
     <!-- header -->
     <body>
         <div class="main-title-img"><img src="./img/company/company_title_bg_img.jpg" alt=""></div>
-        <div class="company">
-            <div class="main-title">
+        <div class="main-title">
                 <b>회사소개</b>
             </div>
+            <div class="company">
             <div class="main-tab-menu">
                 <ul class="tab-list">
                     <li><a href="company_ceo.html">CEO 인사말</a></li> 
