--- a/company_history.html
+++ b/company_history.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="tab-con02">
-                <b> 자연과 인간의 아름다운 조화</b><strong>를 <br>실현해 나가는 글로벌 로하스 대표 기업</strong>
+                <strong><b> 자연과 인간의 아름다운 조화</b>를 <br>실현해 나가는 글로벌 로하스 대표 기업</strong>
                 <p> 1981년 5월 12일 서울 강남의 압구정동에 작은 채소 가게가 문을 열었습니다. 이름은 ‘풀무원농장 무공해 농산물 직판장’. <br>
                     원경선의 풀무원농장과 정농회 농부들이 기른 유기농산물을 팔았던 이 곳은 한국 최초의 유기농 가게였으며 기업 풀무원의 모태였습니다. <br>
                     이 땅에 유기농의 가치를 확산시키는 사업이 시작되었음을 알리는 깃발과도 같았던 작은 가게 풀무원. <br> 긴 세월이 흐른 지금 풀무원은 한국에서 가장 존경받는 기업, 글로벌 로하스 대표 기업이 되어 자연과 인간의 아름다운 조화를 실현해 나가고 있습니다.</p>
