--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                         <div class="img-wrap">
                             <img class="img" src="./img/index/index_slideimg_01.png" alt="">
                             <span class="slide-text">
-                                <b>01.</b>
-                                <b>식물성지향</b>
+                                <b>1. 식물성지향</b>
                                 <b>사람과 지구의 건강을 위해
                                     식물성 원료를 지향하고
                                     동물성 원료 사용을 줄이는 제품</b>
@@ -73,8 +72,7 @@
                         <div class="img-wrap">
                             <img class="img" src="./img/index/index_slideimg_02.png" alt="">
                             <span class="slide-text">
-                                <b>02.</b>
-                                <b>동물복지</b>
+                                <b>2. 동물복지</b>
                                 <b>건강한 사육환경에서 생산하고
                                     생태계의 지속적인 순환에
                                     기여하는 동물복지 식재</b>
@@ -83,8 +81,7 @@
                         <div class="img-wrap">
                             <img class="img" src="./img/index/index_slideimg_03.png" alt="">
                             <span class="slide-text">
-                                <b>03.</b>
-                                <b>친환경 케어</b>
+                                <b>3. 친환경 케어</b>
                                 <b>차별화된 디자인 푸드와
                                     큐레이션 서비스 역량을 바탕으로,
                                     특별한 고객 경험
@@ -94,8 +91,7 @@
                         <div class="img-wrap">
                             <img class="img" src="./img/index/index_slideimg_04.png" alt="">
                             <span class="slide-text">
-                                <b>04.</b>
-                                <b>건강한 경험</b>
+                                <b>4. 건강한 경험</b>
                                 <b>원료,제조,판매,폐기 등
                                     환경에 부정적인 영향 요인을
                                     제거하거나 최소화</b>
