--- a/index.html
+++ b/index.html
@@ -32,6 +32,40 @@
 
 <body>
 
+    <!-- fixed 버튼 -->
+    
+    <div class="sticky-btn">
+        <div class="call-btn"><img src="./img/index/index_callbtn_01.png" alt="상담 문의 아이콘"></div>
+        <div class="up-btn"><img src="./img/index/index_upbtn_01.png" alt="업 화살표 아이콘"></div>
+
+        <!-- 고객센터 팝업 -->
+        <div class="call-popup">
+            <button class="close-popup">✖</button>
+            <h3><span>풀무원</span> 고객기쁨센터</h3>
+            <div class="call-center">
+                <img src="./img/index/index_callbtn_02.png" alt="전화 아이콘">
+                <h2>080-022-0085</h2>
+            </div>
+            <p>해외 82-2-6411-8301
+                (발신자 부담)</p>
+            <div class="call-center2">
+                <b>상담시간</b>
+                <b>평일 09:00 ~ 18:00
+                    점심 12:00 ~ 13:00
+                    토요일,일요일,공휴일 휴무</b>
+            </div>
+            <div class="call-center2">
+                <b>이메일 상담</b>
+                <b> pulmuone_help@pulmuone.com 
+                    이메일로 문의 시 상담원이 1대1로
+                    고객님의 의견을 접수합니다.</b>
+            </div>
+            <p>풀무원은 고객의 의견을 소중히 여깁니다.</p>
+        </div>
+    </div>
+
+    
+
     <main>
         <section class="sec1">
             <div class="section-wrap">
