--- a/food_safety.html
+++ b/food_safety.html
@@ -80,9 +80,9 @@
                             한 걸음씩 나아가고 있습니다.</h3>
                         <div class="safety-tab-menu">
                             <ul class="tab-list">
-                                <li class="active"><a href="#">규정과 원칙</a></li>
-                                <li><a href="#">개발과 실현</a></li>
-                                <li><a href="#">개선과 혁신</a></li>
+                                <a href="#"><li class="active">규정과 원칙</li></a>
+                                <a href="#"><li>개발과 실현</li></a>
+                                <a href="#"><li>개선과 혁신</li></a>
                             </ul>
                         </div>
                         <div class="safety-tab-content">
